--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario</title>
-    <link rel="stylesheet" href="/public/css/Registro.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Registro.css') }}">
 </head>
 <body>
     <h1>Registro de Usuario</h1>
@@ -45,7 +45,7 @@
         <button type="submit">Registrar</button>
     </form>
 
-    <script src="/public/js/registro.js"></script>
+    <script src="{{ url_for('static', filename='js/mi_script.js') }}"></script>
 </body>
 </html>
 
