--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -45,7 +45,7 @@
         <button type="submit">Registrar</button>
     </form>
 
-    <script src="{{ url_for('static', filename='js/mi_script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/Registro.js') }}"></script>
 </body>
 </html>
 
