--- a/static/css/Inicio.css
+++ b/static/css/Inicio.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url(Fondo\ Cupido\ API.jpg);
+    background-image:url(Imagenes\ Cupido\ API.jpg);
     background-size: cover;
     color: #8a1515ef;
     text-align: center;
