--- a/templates/Inicio.html
+++ b/templates/Inicio.html
@@ -16,7 +16,7 @@
         <p><bold>¡La nueva y más exitosa web de citas que dejaras de usar en breve!</bold></p>
         <div id="intro-container" class="container">
             <p>¿Ya tiene una cuenta? Si no es el caso,¡hora de crearse una!</p>
-            <button onclick="window.location.href='registro.html'">Registrarse</button>
+            <button onclick="window.location.href='registro'">Registrarse</button>
             <button onclick="window.location.href='iniciar_sesion.html'">Iniciar Sesión</button>
         </div>
     </div>
