--- a/static/css/Registro.css
+++ b/static/css/Registro.css
@@ -1,9 +1,16 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
     color: #333;
+    font-weight: bold;
+
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #46330c;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: rgb(233, 231, 221);
 }
 
 h1 {
