--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -11,19 +11,19 @@
     <form id="registroForm">
         <div>
             <label for="id_usuario">ID de Usuario:</label>
-            <input type="text" id="id_usuario" name="id_usuario" required>
+            <input type="text" id="id_usuario" name="id_usuario" required placeholder="Ej: 105A">
         </div>
         <div>
             <label for="nombre_usuario">Nombre de Usuario:</label>
-            <input type="text" id="nombre_usuario" name="nombre_usuario" required>
+            <input type="text" id="nombre_usuario" name="nombre_usuario" required placeholder="Ej: Ana Melano"> 
         </div>
         <div>
             <label for="contrasena">Contraseña:</label>
-            <input type="password" id="contrasena" name="contrasena" required>
+            <input type="password" id="contrasena" name="contrasena" required placeholder="¡Recuerde poner una contraseña segura!">
         </div>
         <div>
             <label for="edad">Edad:</label>
-            <input type="number" id="edad" name="edad" required min="18" max="90">
+            <input type="number" id="edad" name="edad" required min="18" max="90" placeholder="La edad no es solo un número.">
         </div>
         <div>
             <label for="genero">Género:</label>
@@ -34,13 +34,15 @@
             </select>
         </div>
         <div>
-            <label for="orientacion_sexual">Orientación Sexual:</label>
-            <select id="orientacion_sexual" name="orientacion_sexual">
-                <option value="heterosexual">Heterosexual</option>
-                <option value="bisexual">Bisexual</option>
-                <option value="homosexual">Homosexual</option>
-                <option value="pansexual">Pansexual</option>
-            </select>
+            <div class="container">
+                <label for="orientacion_sexual">Orientación Sexual:</label>
+                <select id="orientacion_sexual" name="orientacion_sexual">
+                    <option value="heterosexual">Heterosexual</option>
+                    <option value="bisexual">Bisexual</option>
+                    <option value="homosexual">Homosexual</option>
+                    <option value="pansexual">Pansexual</option>
+                </select>
+            </div>
         </div>
         <button type="submit">Registrar</button>
     </form>
