--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <form id="registroForm">
-        <h1>Registro de Usuario</h1>
+        <div class="titulo">
+            <h1>Registro de Usuario</h1>
+        </div>
         <div>
             <label for="id_usuario">ID de Usuario:</label>
-            <input type="text" id="id_usuario" name="id_usuario" required placeholder="Ej: 105A">
+            <input type="text" id="id_usuario" name="id_usuario" required placeholder="Ej: Mamasota69
+            ">
         </div>
         <div>
             <label for="nombre_usuario">Nombre de Usuario:</label>
