--- a/static/css/Inicio.css
+++ b/static/css/Inicio.css
@@ -1,7 +1,7 @@
 body {
     background-image:url(../Imagenes/Fondo\ Cupido\ API.jpg);
     background-size: cover;
-    color: #8a1515ef;
+    color: #961d1d;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -128,6 +128,7 @@ body {
     font-size: 25px;
 }
 button {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 30px;
     padding: 15px 30px;
     border: none;
@@ -141,7 +142,7 @@ button {
 
 }
 button:hover {
-    background-color: #e78b3f;
+    background-color: rgb(207, 116, 55);
     color: #8a1515ef;
     box-shadow:  5px 8px 5px #472d0a94,  
         1px -1px 0 #ad8632,
