--- a/static/css/Registro.css
+++ b/static/css/Registro.css
@@ -1,6 +1,6 @@
 body {
     font-family:Georgia, 'Times New Roman', Times, serif;
-    color: #333;
+    color: #293507;
     font-weight: bold;
 
     background-image: url(../Imagenes/Fondo\ Cupido\ API.jpg);
@@ -8,26 +8,35 @@ body {
     max-width: 600px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #46330c;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: rgb(233, 231, 221);
+    box-shadow: 0 0 10px rgba(126, 7, 7, 0.1);
+    background-color: rgb(241, 238, 220);
+    display: auto;
 }
 
-h1 {
+.titulo {
+    border-radius: 10px;
     text-align: center;
     margin-top: 20px;
+    color: rgb(199, 80, 1);
+    text-shadow:  1px 1px 1px #500924ea,  
+        1px -1px 0 #5009247e,
+        -1px 1px 0 #5009247e,
+        1px 1px 0 #5009247e;
 }
 
 form {
+    text-align: center;
     margin-top: 30px;
     max-width: 600px;
     margin: 25px;
     background-color: rgb(233, 231, 221);
-    padding: 50px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px rgba(41, 13, 34, 0.795);
-
+    padding: 80px;
+    border-radius: 20px;
+    box-shadow:  15px 15px 10px #0e1a3a85,  
+        5px -5px 0 #365025,
+        -5px 5px 0 #365025,
+        5px 5px 0 #365025;
 }
 
 form div {
@@ -49,15 +58,42 @@ input, select {
 
 button {
     width: 100%;
-    padding: 10px;
-    background-color: #4f720f;
-    color: white;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 21px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    background: rgb(70, 92, 28);
+    color: #ffffff;
+    border-radius: 15px;
+    font-family: 'Fira Code';
+    transition: all 0.3s ease-in-out;
+    margin-top: 20px;
+
 }
 
 button:hover {
-    background-color: #ca6303;
-    color: #46330c;
+    background-color: rgba(199, 80, 1, 0.76);
+    color: #6b0e0eef;
+    box-shadow:  5px 8px 5px #472d0a94,  
+        1px -1px 0 #ad8632,
+        -1px 1px 0 #ad8632,
+        1px 1px 0 #ad8632;
+        transform: translateY(-5px) scale(1.1);
+}
+
+#orientacion_sexual {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: #f7f4ede0;
+}
+#orientacion_sexual:option {
+    background-color: #ca4343;
+    color: white;
+}
+option:hover {
+    background-color: #ca4343;
+}
+#genero {
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
