--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -22,7 +22,7 @@
         </div>
         <div>
             <label for="contrasena">Contraseña:</label>
-            <input type="password" id="contrasena" name="contrasena" required placeholder="¡Recuerde poner una contraseña segura!">
+            <input type="password" id="contrasena" name="contrasena" required placeholder="¡Recuerda poner una contraseña segura!">
         </div>
         <div>
             <label for="edad">Edad:</label>
@@ -47,7 +47,7 @@
                 </select>
             </div>
         </div>
-        <button type="submit">Registrar</button>
+        <button type="submit">Registrarse</button>
     </form>
 
     <script src="{{ url_for('static', filename='js/Registro.js') }}"></script>
