--- a/templates/Inicio.html
+++ b/templates/Inicio.html
@@ -17,7 +17,7 @@
         <div id="intro-container" class="container">
             <p>¿Ya tiene una cuenta? Si no es el caso,¡hora de crearse una!</p>
             <button onclick="window.location.href='registro'">Registrarse</button>
-            <button onclick="window.location.href='iniciar_sesion.html'">Iniciar Sesión</button>
+            <button onclick="window.location.href='inicio_sesion'">Iniciar Sesión</button>
         </div>
     </div>
 
