--- a/static/css/Inicio_Sesion.css
+++ b/static/css/Inicio_Sesion.css
@@ -2,7 +2,6 @@ body {
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: #293507;
     font-weight: bold;
-
     background-image: url(../Imagenes/Fondo\ Cupido\ API.jpg);
     background-size: cover;
     max-width: 600px;
@@ -11,7 +10,10 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(126, 7, 7, 0.1);
     background-color: rgb(241, 238, 220);
-    display: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .titulo {
@@ -24,7 +26,9 @@ body {
         -1px 1px 0 #5009247e,
         1px 1px 0 #5009247e;
 }
-
+.formulario {
+    width: 700px;
+}
 form {
     text-align: center;
     margin-top: 30px;
