--- a/templates/Inicio_Sesion.html
+++ b/templates/Inicio_Sesion.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/inicio_sesion.css') }}">
 </head>
 <body>
-    <form id="registroForm">
-        <div class="titulo">
-            <h1>Inicio de Sesión </h1>
-        </div>
-        <div>
-            <label for="id_usuario">ID de Usuario:</label>
-            <input type="text" id="id_usuario" name="id_usuario" required placeholder="Ej: Mimi_1
-            ">
-        </div>
-        <div>
-            <label for="contrasena">Contraseña:</label>
-            <input type="password" id="contrasena" name="contrasena" required placeholder="¡Recuerda poner una contraseña segura!">
-        </div>
-        
-        <button type="submit">Iniciar Sesión</button>
-    </form>
-
+    <div class="formulario">
+        <form id="registroForm">
+            <div class="titulo">
+                <h1>Inicio de Sesión </h1>
+            </div>
+            <div>
+                <label for="id_usuario">ID de Usuario:</label>
+                <input type="text" id="id_usuario" name="id_usuario" required placeholder="Ej: Mimi_1
+                ">
+            </div>
+            <div>
+                <label for="contrasena">Contraseña:</label>
+                <input type="password" id="contrasena" name="contrasena" required placeholder="¡Recuerda poner una contraseña segura!">
+            </div>
+            
+            <button type="submit" onclick="window.location.href='Matches'">Iniciar Sesión</button>
+        </form>
+    </div>
     <script src="{{ url_for('static', filename='js/Registro.js') }}"></script>
 </body>
 </html>
