--- a/templates/Matches.html
+++ b/templates/Matches.html
@@ -15,6 +15,10 @@
             font-family: Arial, sans-serif;
         }
         .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
             height: 650px;
             width: 450px;
             padding: 30px;
@@ -24,6 +28,7 @@
             text-align: center;
         }
         .card img {
+            margin-top: 30px;
             width: 100px;
             height: 100px;
             border-radius: 50%;
@@ -62,13 +67,15 @@
 <body>
     <div class="card" id="profile-card">
         <img src="https://via.placeholder.com/100" alt="Foto de perfil">
-        <h2 id="name">Nombre</h2>
-        <p id="age">Edad: 25</p>
-        <p id="bio">Bio: Soy una persona apasionada por la tecnología y los viajes.</p>
-        <div class="buttons">
-            <button class="match" onclick="handleMatch()">Match</button>
-            <button class="reject" onclick="handleReject()">Rechazar</button>
+        <div class=""><h2 id="name">Nombre</h2>
+            <p id="age">Edad: 25</p>
+            <p id="bio">Bio: Soy una persona apasionada por la tecnología y los viajes.</p>
+            <div class="buttons">
+                <button class="match" onclick="handleMatch()">Match</button>
+                <button class="reject" onclick="handleReject()">Rechazar</button>
+            </div>
         </div>
+        
     </div>
 
     <script>
