--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -47,7 +47,7 @@
                 </select>
             </div>
         </div>
-        <button type="submit">Registrarse</button>
+        <button type="submit" onclick="window.location.href='Matches'" >Registrarse</button>
     </form>
 
     <script src="{{ url_for('static', filename='js/Registro.js') }}"></script>
