--- a/templates/Inicio_Sesion.html
+++ b/templates/Inicio_Sesion.html
@@ -25,7 +25,7 @@
             <button type="submit" onclick="window.location.href='Matches'">Iniciar Sesión</button>
         </form>
     </div>
-    <script src="{{ url_for('static', filename='js/Registro.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/inicio_sesion.js') }}"></script>
 </body>
 </html>
 
