--- a/templates/Matches.html
+++ b/templates/Matches.html
@@ -6,7 +6,7 @@
     <title>Perfil de Match</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Matches.css') }}">
 </head>
-<body>
+<body data-id="{{ id_usuario }}">
     <div class="card" id="profile-card">
         <img src="https://via.placeholder.com/100" alt="Foto de perfil">
         <div class=""><h2 id="name">Nombre</h2>
