--- a/templates/Matches.html
+++ b/templates/Matches.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil de Match</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/Matches.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/matches.css') }}">
 </head>
 <body data-id="{{ id_usuario }}">
     <div class="card" id="profile-card">
@@ -19,6 +19,6 @@
         </div>
         
     </div>
-    <script src="{{ url_for('static', filename='js/Matches.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/matches.js') }}"></script>
 </body>
 </html>
