--- a/templates/Matches.html
+++ b/templates/Matches.html
@@ -13,8 +13,8 @@
             <p id="age">Edad: 25</p>
             <p id="bio">Bio: Soy una persona apasionada por la tecnología y los viajes.</p>
             <div class="buttons">
-                <button class="match" onclick="handleMatch()">Match</button>
-                <button class="reject" onclick="handleReject()">Rechazar</button>
+                <button class="match" onclick="manejarMatch()">Match</button>
+                <button class="reject" onclick="manejarRechazo()">Rechazar</button>
             </div>
         </div>
         
