--- a/templates/Inicio.html
+++ b/templates/Inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivial Retro</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Inicio.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
