--- a/static/css/Registro.css
+++ b/static/css/Registro.css
@@ -98,7 +98,7 @@ option:hover {
 }
 
 textarea {
-    width: 70%;
+    width: 80%;
     height: 120px;
     padding: 12px;
     font-size: 16px;
@@ -116,4 +116,42 @@ label[for="bio"] {
     margin-bottom: 5px;
     display: block;
     color: #333;
+}
+
+/* Estilo para el contenedor de la foto de perfil */
+.foto-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;  /* Centra el contenido horizontalmente */
+    justify-content: center;  /* Alinea el contenido verticalmente */
+    margin-top: 20px;  /* Espacio adicional para separar de otros campos */
+}
+
+/* Estilo para el input de tipo "file" */
+#foto_perfil {
+    display: none; /* Ocultamos el input original */
+}
+
+/* Botón estilizado para el input de "file" */
+.foto-perfil-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #ad8632;
+    color: white;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s;
+}
+
+/* Vista previa de la foto */
+#vista-previa {
+    margin-top: 15px;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    display: none;
 }
