--- a/static/css/Matches.css
+++ b/static/css/Matches.css
@@ -22,7 +22,7 @@ body {
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     height: 650px;
     width: 450px;
@@ -33,11 +33,12 @@ body {
     text-align: center;
 }
 .card img {
-    margin-top: 30px;
-    width: 100px;
-    height: 100px;
+    margin-top: 20px;
+    width: 50%;
+    height: auto; 
     border-radius: 50%;
     object-fit: cover;
+    border: 3px solid #fff; 
 }
 .card h2 {
     margin: 15px 0 5px;
