--- a/templates/Inicio.html
+++ b/templates/Inicio.html
@@ -13,7 +13,7 @@
     <div id="start-screen" class="container">
         <h1 class="bienvenidos"><bold>BIENVENID@S A</bold></h1>
         <h2 class="custom-title"><strong>༻𝐂𝐔𝐏𝐈𝐃♡༺</strong></h2>
-        <p><bold>¡La nueva y más exitosa web de citas que dejaras de usar en breve!</bold></p>
+        <p><bold>¡La nueva y más exitosa web de citas que no dejaras de usar en breve!</bold></p>
         <div id="intro-container" class="container">
             <p>¿Ya tiene una cuenta? Si no es el caso,¡hora de crearse una!</p>
             <button onclick="window.location.href='registro'">Registrarse</button>
