--- a/static/css/Matches.css
+++ b/static/css/Matches.css
@@ -4,12 +4,12 @@ body {
     align-items: center;
     height: 100vh;
 
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #293507;
     font-weight: bold;
 
     background-image: url(../Imagenes/Fondo\ Cupido\ API.jpg);
-    background-size:cover;
+    background-size: cover;
     max-width: 600px;
     margin: auto;
     padding: 20px;
@@ -17,6 +17,71 @@ body {
     box-shadow: 0 0 10px rgba(126, 7, 7, 0.1);
     background-color: rgb(241, 238, 220);
 
+}
+
+.sidebar {
+    height: 100vh;
+
+    width: 60px;
+
+    background-color: #f8f9fa;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.sidebar a {
+    margin: 20px 0;
+    color: black;
+    text-decoration: none;
+    font-size: 24px;
+
+}
+
+.sidebar {
+    background-color: #e4dcdc;
+
+    color: black;
+    position: fixed;
+    left: 0;
+    top: 0px;
+    width: 50px;
+    height: 100%;
+    background-color: #deccdd;
+    padding: 20px;
+}
+
+
+
+.sidebar {
+    height: 100vh;
+
+    width: 60px;
+
+
+    background-color: #365025;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.sidebar a {
+    margin: 20px 0;
+    color: black;
+    text-decoration: none;
+    font-size: 24px;
+    margin: 60px 0;
+
+}
+
+.sidebar a:hover {
+    background-color: #ddd;
+
+    color: black;
 }
 
 .card {
@@ -32,26 +97,31 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
+
 .card img {
     margin-top: 20px;
     width: 50%;
-    height: auto; 
+    height: auto;
     border-radius: 50%;
     object-fit: cover;
-    border: 3px solid #fff; 
+    border: 3px solid #fff;
 }
+
 .card h2 {
     margin: 15px 0 5px;
     font-size: 24px;
 }
+
 .card p {
     margin: 0 0 20px;
     color: #555;
 }
+
 .buttons {
     display: flex;
     justify-content: center;
 }
+
 .buttons button {
     padding: 10px 50px;
     font-size: 16px;
@@ -60,10 +130,12 @@ body {
     cursor: pointer;
     margin: 20px;
 }
+
 .match {
     background-color: #4caf50;
     color: white;
 }
+
 .reject {
     background-color: #f44336;
     color: white;
