--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -10,8 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+
+<body data-id="{{ id_usuario }}">
     <!-- Barra lateral fija y angosta -->
+
     <div class="sidebar">
         <a href="#"><i class="fas fa-user"></i></a>
         <a href="#"><i class="fas fa-heart"></i></a>
