--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Registro.css') }}">
 </head>
+
 <body>
     <form id="registroForm" enctype="multipart/form-data">
         <div class="titulo">
@@ -18,15 +20,17 @@
         </div>
         <div>
             <label for="nombre_usuario">Nombre de Usuario:</label>
-            <input type="text" id="nombre_usuario" name="nombre_usuario" required placeholder="Ej: Ana Melano"> 
+            <input type="text" id="nombre_usuario" name="nombre_usuario" required placeholder="Ej: Ana Melano">
         </div>
         <div>
             <label for="contrasena">Contraseña:</label>
-            <input type="password" id="contrasena" name="contrasena" required placeholder="¡Recuerda poner una contraseña segura!">
+            <input type="password" id="contrasena" name="contrasena" required
+                placeholder="¡Recuerda poner una contraseña segura!">
         </div>
         <div>
             <label for="edad">Edad:</label>
-            <input type="number" id="edad" name="edad" required min="18" max="90" placeholder="La edad no es solo un número.">
+            <input type="number" id="edad" name="edad" required min="18" max="90"
+                placeholder="La edad no es solo un número.">
         </div>
         <div>
             <label for="genero">Género:</label>
@@ -62,4 +66,5 @@
 
     <script src="{{ url_for('static', filename='js/Registro.js') }}"></script>
 </body>
+
 </html>
