--- a/templates/Matches.html
+++ b/templates/Matches.html
@@ -11,10 +11,10 @@
 
 <body data-id="{{ id_usuario }}">
     <div class="sidebar">
-        <a href="perfil"><i class="fas fa-user"> </i></a>
-        <a href="#"><i class="fas fa-heart"></i></a>
-        <a href="#"><i class="fas fa-comment-alt"></i></a>
-        <a href=""><i class="fas fa-sign-out-alt"></i></a>
+        <a href="../perfil/{{ id_usuario }}"><i class="fas fa-user"></i></a>
+        <a href="/matches/{{ id_usuario }}"><i class="fas fa-heart"></i></a>
+        <a href="/chat/{{ id_usuario }}"><i class="fas fa-comment-alt"></i></a>
+        <a href=#><i class="fas fa-sign-out-alt"></i></a>
     </div>
     <div class="card" id="profile-card">
         <img src="https://via.placeholder.com/100" alt="Foto de perfil">
