--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil de Usuario</title>
-    <link rel="stylesheet" href="perfil.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/perfil.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -16,7 +16,7 @@
 
     <div class="sidebar">
         <!-- Enlace al perfil -->
-        <a href="/perfil/{{ id_usuario }}"><i class="fas fa-user"></i></a>
+        <a href="../perfil/{{ id_usuario }}"><i class="fas fa-user"></i></a>
         <a href="/matches/{{ id_usuario }}"><i class="fas fa-heart"></i></a>
         <a href="/chat/{{ id_usuario }}"><i class="fas fa-comment-alt"></i></a>
         <a href="/cerrar_sesion"><i class="fas fa-sign-out-alt"></i></a>
@@ -87,7 +87,7 @@
     </div>
 
 
-    <script src="perfil.js"></script>
+    <script src="{{ url_for('static', filename='js/perfil.js') }}"></script>
 </body>
 
 </html>
