--- a/static/css/perfil.css
+++ b/static/css/perfil.css
@@ -63,7 +63,7 @@ body {
     color: black;
     text-decoration: none;
     font-size: 24px;
-
+    margin: 60px 0;
 }
 
 .sidebar a:hover {
@@ -85,7 +85,7 @@ body {
     max-width: 1300px;
     width: 100%;
     margin-left: 80px;
-    background-image: url('img apii/fono base.jpg');
+    background-image: url(../Imagenes/Fondo_Base.jpg);
 }
 
 /* Imagen de perfil */
