--- a/static/css/perfil.css
+++ b/static/css/perfil.css
@@ -212,3 +212,17 @@ select {
         margin-bottom: 20px;
     }
 }
+
+#save-btn {
+    background-color: #909390;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 15px;
+}
