--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -10,12 +10,9 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
-
 <body data-id="{{ id_usuario }}">
     <!-- Barra lateral fija y angosta -->
-
     <div class="sidebar">
-        <!-- Enlace al perfil -->
         <a href="../perfil/{{ id_usuario }}"><i class="fas fa-user"></i></a>
         <a href="/matches/{{ id_usuario }}"><i class="fas fa-heart"></i></a>
         <a href="/chat/{{ id_usuario }}"><i class="fas fa-comment-alt"></i></a>
@@ -30,27 +27,25 @@
 
         <div class="profile-card">
             <h2 id="username">NOMBRE DE USUARIO</h2>
-            <p id="handle">ID USUARIO</p>
-            <p id="location">EDAD</p>
-            <p id="member-date">GENERO</p>
-            <p id="interests">ORIENTACION SEXUAL</p>
+            
+            <p><strong>Id de usuario:</strong> <span id="handle">ID USUARIO</span></p>
+            <p><strong>Edad:</strong> <span id="location">EDAD</span></p>
+            <p><strong>Género:</strong> <span id="member-date">GENERO</span></p>
+            <p><strong>Orientación sexual:</strong> <span id="interests">ORIENTACION SEXUAL</span></p>
+        
             <button id="edit-btn">Editar perfil</button>
             <button id="delete-btn">Eliminar perfil</button>
         </div>
+        
     </div>
 
     <!-- Pestaña Modal de edición -->
-    <div id="edit-modal" class="modal" enctype="multipart/form-data">
+    <div id="edit-modal" class="modal">
         <div class="modal-content">
             <span id="close-edit-modal" class="close" style="cursor: pointer;">&times;</span>
             <h2>Editar Perfil</h2>
-            <label>Nombre:</label>
-            <input type="text" id="id_usuario" name="id_usuario" required placeholder="Ej: Mamasota69">
-            <div>
-                <label for="nombre_usuario">Nombre de Usuario:</label>
-                <input type="text" id="nombre_usuario" name="nombre_usuario" required placeholder="Ej: Ana Melano">
-            </div>
-
+            <label>Nombre de Usuario:</label>
+            <input type="text" id="nombre_usuario" name="nombre_usuario" required placeholder="Ej: Ana Melano">
             <div>
                 <label for="edad">Edad:</label>
                 <input type="number" id="edad" name="edad" required min="18" max="90"
@@ -65,27 +60,28 @@
                 </select>
             </div>
             <div>
-                <div class="container">
-                    <label for="orientacion_sexual">Orientación Sexual:</label>
-                    <select id="orientacion_sexual" name="orientacion_sexual">
-                        <option value="heterosexual">Heterosexual</option>
-                        <option value="bisexual">Bisexual</option>
-                        <option value="homosexual">Homosexual</option>
-                        <option value="pansexual">Pansexual</option>
-                    </select>
-                </div>
+                <label for="orientacion_sexual">Orientación Sexual:</label>
+                <select id="orientacion_sexual" name="orientacion_sexual">
+                    <option value="heterosexual">Heterosexual</option>
+                    <option value="bisexual">Bisexual</option>
+                    <option value="homosexual">Homosexual</option>
+                    <option value="pansexual">Pansexual</option>
+                </select>
+            </div>
+
+            <div class="bio-container">
+                <label for="bio">Biografía:</label>
+                <textarea id="bio" name="bio" required placeholder="Cuéntanos un poco sobre ti"></textarea>
             </div>
 
             <div class="foto-container">
                 <label for="foto_perfil">Foto de Perfil:</label>
-                <input type="file" id="foto_perfil" name="foto_perfil" accept="image/*" onchange="vistaPrevia(event)">
+                <input type="file" id="foto_perfil" name="foto_perfil" accept="image/*" required>
                 <label for="foto_perfil" class="foto-perfil-btn">Seleccionar Foto</label>
-
             </div>
-            <button type="submit">Guardar cambios</button>
+            <button id="save-btn">Guardar cambios</button>
         </div>
     </div>
-
 
     <script src="{{ url_for('static', filename='js/perfil.js') }}"></script>
 </body>
