--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('../img/fondo.jpg');
+    background-image: url(../Imagenes/Fondo_Base.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
