--- a/templates/Matches.html
+++ b/templates/Matches.html
@@ -14,7 +14,7 @@
         <a href="../perfil/{{ id_usuario }}"><i class="fas fa-user"></i></a>
         <a href="/matches/{{ id_usuario }}"><i class="fas fa-heart"></i></a>
         <a href="/chat/{{ id_usuario }}"><i class="fas fa-comment-alt"></i></a>
-        <a href=#><i class="fas fa-sign-out-alt"></i></a>
+        <a href="/cerrar_sesion"><i class="fas fa-sign-out-alt"></i></a>
     </div>
     <div class="card" id="profile-card">
         <img src="https://via.placeholder.com/100" alt="Foto de perfil">
