--- a/static/css/Inicio.css
+++ b/static/css/Inicio.css
@@ -1,7 +1,7 @@
 body {
     background-image:url(../Imagenes/Fondo\ Cupido\ API.jpg);
     background-size: cover;
-    color: #961d1d;
+    color: #ac3b3b;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -9,10 +9,10 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    text-shadow:  1px 1px 1px #500924ea,  
-        1px -1px 0 #5009247e,
-        -1px 1px 0 #5009247e,
-        1px 1px 0 #5009247e;
+    text-shadow: 0 0 0  #500924ea,  
+        1px -1px 0px #500924,
+        -2px 2px 0 #500924,
+        1px 1px 0 #500924;
 
 }
 
@@ -29,7 +29,7 @@ body {
     user-select: none;
     margin-top: 10px;
     margin-bottom: auto;
-    color:#e78b3f;
+    color:#ad8632;
     font-size: 80px;
     text-shadow:  5px 7px 3px #5009247e,  
         1px -1px 0 #19360b,
@@ -117,7 +117,7 @@ body {
 }
 #start-screen h1 {
     font-size: 30px;
-    color: #e78b3f;
+    color: #ad8632;
     margin-bottom: auto;
     text-shadow:  8px 8px 3px #5009247e,  
     1px -1px 0 #19360b,
