--- a/static/css/Matches.css
+++ b/static/css/Matches.css
@@ -8,8 +8,8 @@ body {
     color: #293507;
     font-weight: bold;
 
-    background-image: url(../Imagenes/Fondo\ Cupido\ API.jpg);
-    background-size: cover;
+    background-image: url(../Imagenes/match\ bg.jpg);
+    background-size:contain;
     max-width: 600px;
     margin: auto;
     padding: 20px;
@@ -37,7 +37,6 @@ body {
     color: black;
     text-decoration: none;
     font-size: 24px;
-
 }
 
 .sidebar {
@@ -53,16 +52,10 @@ body {
     padding: 20px;
 }
 
-
-
 .sidebar {
     height: 100vh;
-
     width: 60px;
-
-
     background-color: #365025;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -75,12 +68,10 @@ body {
     text-decoration: none;
     font-size: 24px;
     margin: 60px 0;
-
 }
 
 .sidebar a:hover {
     background-color: #ddd;
-
     color: black;
 }
 
@@ -98,23 +89,39 @@ body {
     text-align: center;
 }
 
+.card {
+    background-image: url(../Imagenes/Fondo_Base.jpg);
+    background-size: cover;
+    padding: 50px;
+    border-radius: 20px;
+    box-shadow:  15px 15px 10px #0e1a3a85,  
+        5px -5px 0 #365025,
+        -5px 5px 0 #365025,
+        5px 5px 0 #365025;
+}
 .card img {
     margin-top: 20px;
     width: 50%;
     height: auto;
     border-radius: 50%;
     object-fit: cover;
-    border: 3px solid #fff;
+    border: 3px solid #365025;
 }
 
 .card h2 {
     margin: 15px 0 5px;
     font-size: 24px;
+    color: #9e7237e5;
+    text-shadow:  5px 8px 5px #472d0a94,  
+        2px -2px 0 #472d0a,
+        -2px 2px 0 #472d0a,
+        2px 2px 0 #472d0a;
+        transform: translateY(-5px) scale(1.1);
 }
 
 .card p {
-    margin: 0 0 20px;
-    color: #555;
+    margin: 20px 10px 20px;
+    color: #472d0ae0;
 }
 
 .buttons {
@@ -130,13 +137,60 @@ body {
     cursor: pointer;
     margin: 20px;
 }
+.match:hover {
+    background-color: rgb(150, 180, 67);
+    color: #4d2e0bef;
+    box-shadow:  5px 8px 5px #472d0a94,  
+        1px -1px 0 #ad8632,
+        -1px 1px 0 #ad8632,
+        1px 1px 0 #ad8632;
+        transform: translateY(-5px) scale(1.1);
+}
 
 .match {
-    background-color: #4caf50;
-    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    padding: 15px 30px;
+    border: none;
+    cursor: pointer;
+    background: rgb(70, 92, 28);
+    color: #ffffff;
+    border-radius: 15px;
+    font-family: 'Fira Code';
+    transition: all 0.3s ease-in-out;
+    margin-top: 20px;
+    box-shadow:  1px 1px 1px #472d0a94,  
+        1px -1px 0 #16250a,
+        -1px 1px 0 #16250a,
+        1px 1px 0 #16250a;
+        transform: translateY(-5px) scale(1.1);
+}
+
+.reject:hover {
+    background-color: rgb(218, 105, 105);
+    color: #4d2e0bef;
+    box-shadow:  5px 8px 5px #472d0a94,  
+        1px -1px 0 #ad8632,
+        -1px 1px 0 #ad8632,
+        1px 1px 0 #ad8632;
+        transform: translateY(-5px) scale(1.1);
 }
 
 .reject {
-    background-color: #f44336;
-    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    padding: 15px 30px;
+    border: none;
+    cursor: pointer;
+    background: rgb(150, 41, 41);
+    color: #ffffff;
+    border-radius: 15px;
+    font-family: 'Fira Code';
+    transition: all 0.3s ease-in-out;
+    margin-top: 20px;
+    box-shadow:  1px 1px 1px #472d0a94,  
+        1px -1px 0 #380806,
+        -1px 1px 0 #380806,
+        1px 1px 0 #380806;
+        transform: translateY(-5px) scale(1.1);
 }
