--- a/static/css/Registro.css
+++ b/static/css/Registro.css
@@ -74,7 +74,7 @@ button {
 }
 
 button:hover {
-    background-color: rgba(199, 80, 1, 0.76);
+    background-color: #c75001c2;
     color: #6b0e0eef;
     box-shadow:  5px 8px 5px #472d0a94,  
         1px -1px 0 #ad8632,
@@ -136,7 +136,7 @@ label[for="bio"] {
 .foto-perfil-btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #ad8632;
+    background-color: #c75001c2;
     color: white;
     border-radius: 5px;
     font-size: 16px;
