--- a/static/css/perfil.css
+++ b/static/css/perfil.css
@@ -82,9 +82,10 @@ body {
     border-radius: 12px;
     box-shadow: #293507;
     margin: auto;
-    max-width: 1300px;
+    max-width: 100%;
     width: 100%;
     margin-left: 80px;
+    background-size:contain;
     background-image: url(../Imagenes/Fondo_Base.jpg);
 }
 
@@ -93,15 +94,13 @@ body {
     flex: 1;
     display: flex;
     justify-content: center;
-
-
 }
 
 .profile-image-container img {
     width: 500px;
     height: 600px;
     border-radius: 12px;
-    border: 3px solid #ddd;
+    border: 3px solid #324726;
     box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s;
 }
