--- a/templates/chat.html
+++ b/templates/chat.html
@@ -21,7 +21,9 @@
 
     <div id="chat">
         <div class="cabecero">
+            <i class="icono icono-usuario fas fa-user"></i>
             <h2 id="nombre-match">Selecciona un match</h2>
+            <i class="icono icono-telefono fas fa-phone"></i>
         </div>
 
         <div id="status-mensaje"></div>
