--- a/templates/Inicio_Sesion.html
+++ b/templates/Inicio_Sesion.html
@@ -23,6 +23,7 @@
             
             <!-- Elimina el onclick del botón -->
             <button type="submit">Iniciar Sesión</button>
+            <button onclick="window.location.href='registro'">Registrarse</button>
         </form>
     </div>
     <script src="{{ url_for('static', filename='js/inicio_sesion.js') }}"></script>
