--- a/static/css/perfil.css
+++ b/static/css/perfil.css
@@ -86,7 +86,8 @@ body {
     width: 100%;
     margin-left: 80px;
     background-size:contain;
-    background-image: url(../Imagenes/Fondo_Base.jpg);
+    background-image: url(../Imagenes/match\ bg.jpg);
+
 }
 
 /* Imagen de perfil */
@@ -116,7 +117,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background: #e1dcdc;
+    background: #ffffff;
     border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     text-align: left;
