--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(../Imagenes/Fondo_Base.jpg);
+    background-image: url(../Imagenes/поцелуй.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -182,7 +182,8 @@ body {
     right: 0;
     width: 250px;
     height: 100%;
-    background-color: #f4f4f4;
+    background-color:#365025;
+    opacity: 90%;
     padding: 20px;
     box-shadow: -3px 0 5px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
