--- a/static/css/perfil.css
+++ b/static/css/perfil.css
@@ -117,7 +117,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background: #ffffff;
+    background: hwb(0 81% 18%);
     border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     text-align: left;
